[project]
name = "balthazar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiodns>=3.6.1",
    "aiohttp>=3.13.2",
    "beautifulsoup4>=4.14.3",
    "feedparser>=6.0.12",
    "google-genai>=1.56.0",
    "hdbscan>=0.8.41",
    "html-to-markdown>=2.16.1",
    "joblib>=1.5.3",
    "mastodon-py>=2.1.4",
    "numpy>=2.4.0",
    "orjson>=3.11.5",
    "playwright>=1.57.0",
    "pypdf>=6.5.0",
    "scikit-learn>=1.8.0",
    "sqliteai-vector>=0.9.52",
]
